--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,10 +49,33 @@ h4 {
   align-items: center;
 }
 
+.msg {
+  font-size: 17px;
+  font-weight: 500;
+  color: #334155;
+  text-align: center;
+}
+
 .column {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
+}
+
+.infinite-scroll-component {
+  width: 100%;
+  display: grid;
+  margin: 3rem auto;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-items: center;
+  gap: 20px;
+  row-gap: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .infinite-scroll-component {
+    width: 90%;
+  }
 }
 
 @media only screen and (max-width: 1023px) {
